...
            keyboardOptions = KeyboardOptions.Default.copy(imeAction = ImeAction.Done)
        )

        Spacer(modifier = Modifier.height(50.dp))

        StyledButton(
            label = "Login",
            enabled = !awaitingResponse,
            onClick = {
                val usernamePasswordToken = UsernamePasswordLoginToken(username, password)
                awaitingResponse = true
                viewModel.login(
                    loginHandler,
...
